--- a/ContactList/Properties/launchSettings.json
+++ b/ContactList/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "ContactList": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
-      "launchBrowser": true,
+      //"launchBrowser": true,
       //"launchUrl": "swagger",
       "applicationUrl": "https://0.0.0.0:5001;http://0.0.0.0:5000",
       "environmentVariables": {
