--- a/ContactList/Properties/launchSettings.json
+++ b/ContactList/Properties/launchSettings.json
@@ -29,7 +29,7 @@
       "commandName": "Docker",
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "publishAllPorts": true,
-      "useSSL": true
+      //"useSSL": true
     }
   }
 }
