--- a/ContactList/Properties/launchSettings.json
+++ b/ContactList/Properties/launchSettings.json
@@ -23,13 +23,13 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": "true",
-      "applicationUrl": "https://0.0.0.0:5001;http://0.0.0.0:5000"
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     },
     "Docker": {
       "commandName": "Docker",
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "publishAllPorts": true,
-      //"useSSL": true
+      "useSSL": true
     }
   }
 }
