--- a/ContactList/Dockerfile
+++ b/ContactList/Dockerfile
@@ -1,25 +1,19 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
 FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS base
-WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
-COPY . "ContactList/"
-RUN dotnet restore "ContactList/ContactList.csproj"
-COPY . .
-WORKDIR "/app/ContactList"
-RUN dotnet build "ContactList.csproj" -c Release -o /app/build
 
+COPY . /app
+WORKDIR /app
+RUN pwd && ls -l && cd ClientApp/ && ls -l && cd build/ && ls -l
+RUN dotnet restore "ContactList.csproj"
+RUN dotnet build "ContactList.csproj" -c Release -o /app/build
 FROM build AS publish
 RUN dotnet publish "ContactList.csproj" -c Release -o /app/publish
-
 FROM base AS final
-WORKDIR /app
 COPY --from=publish /app/publish .
-WORKDIR ClientApp
-RUN npm install && npm react-scripts build
-WORKDIR /app
-COPY ClientApp/build/. ClinetApp/build/
 ENTRYPOINT ["dotnet", "ContactList.dll"]
+~
